# CustomLanguageCompiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: hello.toy
include/: AST.h  ErrorReporter.h  Interpreter.h  Lexer.h  Parser.h  Semantic.h  Token.h
src/: AST.cpp  ErrorReporter.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Semantic.cpp  main.cpp
